# syntaxnet-haskell

./: .travis.yml  Dockerfile  README.md  stack.yaml  syntaxnet-haskell.cabal
Documentation/: NOTES.md
docs/: NOTES.md  PROPOSAL.md  run.sh
examples/: test1.txt  test3.cnll
src/NLP/SyntaxNet/: SyntaxNet.hs
src/NLP/SyntaxNet/Types/: CoNLL.hs  Conll.hs  ParseTree.hs
test/: Spec.hs
test/examples/: test1.cnll  test1.tree  test2.txt
tests/: Spec.hs
tests/examples/: test2.cnll
