name:                syntaxnet-haskell
version:             0.1.1.0
-- synopsis:
-- description:
homepage:            https://github.com/mgajda/syntaxnet-haskell#readme
license:             MIT
license-file:        LICENSE
author:              Sergey Bushnyak, Michal Gajda
maintainer:          sergey.bushnyak@sigrlami.eu
copyright:           Copyright: (c) 2017 Michal Gajda, Sergey Bushnyak
category:            NLP
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     NLP.SyntaxNet.SyntaxNet
  other-modules:       NLP.SyntaxNet.Types.ParseTree
                     , NLP.SyntaxNet.Types.CoNLL
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , aeson
                     , lens
                     , vector
                     , text
                     , text-format
                     , data-default
                     , cassava
                     , containers
                     , protolude
                     , split
                     , haskell-conll
  default-extensions:  OverloadedStrings
                     , TemplateHaskell
  other-extensions:    ScopedTypeVariables
                    ,  FlexibleContexts
                    ,  DeriveGeneric

  GHC-options: -threaded -O2
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , aeson
                     , hspec
                     , haskell-conll
                     , cassava
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
  
source-repository head
  type:     git
  location: https://github.com/sigrlami/syntaxnet-haskell
